@@ -38,7 +38,8 @@ extern "C" {
 struct SCIP_Cut
 {
    SCIP_ROW*             row;                /**< LP row of this cut */
-   SCIP_Longint          processedlp;        /**< last LP, where this cut was processed */
+   SCIP_Longint          processedlp;        /**< last LP, where this cut was processed in separation of the LP solution */
+   SCIP_Longint          processedlpsol;     /**< last LP, where this cut was processed in separation of other solutions */
    int                   age;                /**< age of the cut: number of successive times, the cut was not violated */
    int                   pos;                /**< position of cut in the cuts array of the cut pool */
 };
@@ -51,12 +52,14 @@ struct SCIP_Cutpool
    SCIP_CLOCK*           poolclock;          /**< separation time */
    SCIP_HASHTABLE*       hashtable;          /**< hash table to identify already stored cuts */
    SCIP_CUT**            cuts;               /**< stored cuts of the pool */
-   SCIP_Longint          processedlp;        /**< last LP that has been processed */
+   SCIP_Longint          processedlp;        /**< last LP that has been processed for separating the LP */
+   SCIP_Longint          processedlpsol;     /**< last LP that has been processed for separating other solutions */
    int                   cutssize;           /**< size of cuts array */
    int                   ncuts;              /**< number of cuts stored in the pool */
    int                   nremovablecuts;     /**< number of cuts stored in the pool that are marked to be removable */
    int                   agelimit;           /**< maximum age a cut can reach before it is deleted from the pool */
    int                   firstunprocessed;   /**< first cut that has not been processed in the last LP */
+   int                   firstunprocessedsol;/**< first cut that has not been processed in the last LP when separating other solutions */
    int                   maxncuts;           /**< maximal number of cuts stored in the pool at the same time */
    SCIP_Bool             globalcutpool;      /**< is this the global cut pool of SCIP? */
 };
